<resources>
    <string name="app_name">一学</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="code_hint">验证码</string>
    <string name="get_code_hint">获取验证码</string>
    <string name="phoneNum_hint">手机号码</string>
    <string name="school_hint">学校</string>
    <string name="major_hint">专业</string>
    <string name="register_hint">注册</string>

    <string name="me_major_hint">学校/专业/年级</string>

    <string name="create_name">Live 主题</string>
    <string name="create_price">Live 价格</string>
    <string name="create_time">开始时间</string>
    <string name="create_summary">Live 简介</string>
    <string name="create_type">内容类型</string>
    <string name="create_isText">Live 种类</string>

    <string name="join_comment_hint">评价</string>
    <string name="join_num_hint">人已参与</string>

    <string name="live_comment">给主讲人的表现打个分</string>
    <string name="live_comment_skip">稍后评价</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="joined_title">我的 LIVE</string>
    <string name="created_title">主讲 Live</string>
    <string name="recommend_title">相关 Live</string>

    <string name="warn_login">请先登录！</string>

    <string name="me_fragment_title">我</string>
    <string name="me_fragment_xuanshange">悬赏</string>
    <string name="me_fragment_teach">教学资源</string>

    <string name="team_name">小组名称</string>
    <string name="team_number_num">目标人数</string>
    <string name="team_pan">小组目标计划</string>
    <string name="wang_join">申请加入</string>
    <string name="study_write">学习记录</string>
    <string name="finish_code">完成任务</string>
    <string name="need_people_num_code">需要人数</string>
    <string name="cuerrent_people_num_code">当前人数</string>
    <string name="team_is_on_code">小组正在进行中</string>    <string name="show_renwu">任务发布</string>
    <string name="send_renwu">发布</string>
    <string name="get_image">获取图片</string>
    <string name="photo">拍照</string>
    <string name="select_image">图片选择器</string>

</resources>
