<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="#39424b"
    android:layout_height="500dp"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/card_live_name"
        app:cardCornerRadius="5dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_live_name"
                android:src="@drawable/ic_assignment_black_24dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"/>

            <EditText
                android:id="@+id/create_team_name"
                android:layout_margin="10dp"
                android:textColor="@color/primary_text"
                android:layout_toEndOf="@+id/img_live_name"
                android:textColorHint="@color/secondary_text"
                android:hint="@string/team_name"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_live_price"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/card_live_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/live_price_img"
                android:src="@drawable/ic_peoplenum_black_24dp"
                android:layout_margin="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/create_team_num"
                android:inputType="number"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:layout_toEndOf="@+id/live_price_img"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:hint="@string/team_number_num"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_live_time"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/card_live_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/teamstart_time_img"
                android:src="@drawable/ic_event_available_black_24dp"
                android:layout_margin="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_margin="10dp"
                android:id="@+id/create_team_time"
                android:layout_toEndOf="@+id/teamstart_time_img"
                android:hint="@string/create_time"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_live_summary"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/card_live_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/live_summary_img"
                android:src="@drawable/ic_gesture_black_24dp"
                android:layout_centerVertical="true"
                android:layout_margin="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/create_team_plan"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/live_summary_img"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:minLines="5"
                android:hint="@string/team_pan"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/team_create_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@drawable/ic_event_create_team_black_24dp"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_live_summary"/>
</android.support.constraint.ConstraintLayout>