<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.teachPack.live.CreateLiveActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            app:layout_collapseMode="none"
            app:layout_scrollFlags="exitUntilCollapsed|scroll|snap"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/live_img"
                android:text="@string/live_comment"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/mProgress"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/progress_color"
                    tools:layout_editor_absoluteX="192dp" />
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_arrow_back_light_24dp"
                android:background="@drawable/toolbar_gradient"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/ic_send_black_24dp" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:padding="10dp"

            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/card_live_name"
                app:cardCornerRadius="5dp"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="60dp"
                tools:layout_editor_absoluteX="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/img_live_name"
                        android:src="@drawable/ic_assignment_black_24dp"
                        android:layout_margin="15dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:id="@+id/live_name"
                        android:text="冰火简史"
                        android:textSize="20sp"
                        android:layout_toEndOf="@+id/img_live_name"
                        android:gravity="center_vertical"
                        android:textColor="@color/primary_text"
                        android:maxLines="1"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_live_star"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/card_live_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="60dp"
                tools:layout_editor_absoluteX="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/live_star_img"
                        android:src="@drawable/ic_star_half_black_24dp"
                        android:layout_margin="15dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <RatingBar
                        android:id="@+id/live_star"
                        android:numStars="5"
                        android:rating="5"
                        android:stepSize="1"
                        android:layout_centerInParent="true"
                        android:isIndicator="false"
                        android:layout_toEndOf="@+id/live_star_img"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_live_comment"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/card_live_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/live_comment_img"
                        android:src="@drawable/ic_gesture_black_24dp"
                        android:layout_centerVertical="true"
                        android:layout_margin="15dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <EditText
                        android:id="@+id/live_summary"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/live_comment_img"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:minLines="5"
                        android:hint="@string/join_comment_hint"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/skip"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_live_comment"
                android:text="@string/live_comment_skip"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


